--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -6,6 +6,10 @@ if BUILD_LINUX
 SUBDIRS += libefi
 endif
 
+if BUILD_MACOS
+SUBDIRS += libefi
+endif
+
 # libnvpair is installed as part of the final build product
 # libzutil depends on it, so it must be compiled before libzutil
 SUBDIRS += libnvpair
