--- a/lib/libicp/Makefile.am
+++ b/lib/libicp/Makefile.am
@@ -71,3 +71,7 @@ KERNEL_ASM = $(ASM_SOURCES_AS)
 nodist_libicp_la_SOURCES = \
 	$(KERNEL_C) \
 	$(KERNEL_ASM)
+
+if !BUILD_MACOS
+libicp_la_LIBADD = -lrt
+endif
