--- a/tests/zfs-tests/cmd/stride_dd/Makefile.am
+++ b/tests/zfs-tests/cmd/stride_dd/Makefile.am
@@ -4,4 +4,6 @@ pkgexecdir = $(datadir)/@PACKAGE@/zfs-tests/bin
 
 pkgexec_PROGRAMS = stride_dd
 stride_dd_SOURCES = stride_dd.c
+if !BUILD_MACOS
 stride_dd_LDADD = -lrt
+endif
