--- a/cmd/zed/Makefile.am
+++ b/cmd/zed/Makefile.am
@@ -43,7 +43,10 @@ zed_LDADD = \
 	$(abs_top_builddir)/lib/libnvpair/libnvpair.la \
 	$(abs_top_builddir)/lib/libuutil/libuutil.la
 
+if !BUILD_MACOS
 zed_LDADD += -lrt $(LIBUDEV_LIBS) $(LIBUUID_LIBS)
+endif
+
 zed_LDFLAGS = -pthread
 
 EXTRA_DIST = agents/README.md
