--- a/lib/libzfs/Makefile.am
+++ b/lib/libzfs/Makefile.am
@@ -46,6 +46,13 @@ USER_C += \
 	os/linux/libzfs_util_os.c
 endif
 
+if BUILD_MACOS
+USER_C += \
+	os/macos/libzfs_mount_os.c \
+	os/macos/libzfs_pool_os.c \
+	os/macos/libzfs_util_os.c
+endif
+
 KERNEL_C = \
 	algs/sha2/sha2.c \
 	cityhash.c \
@@ -90,6 +97,10 @@ libzfs_la_LIBADD += -lutil -lgeom
 endif
 
 libzfs_la_LDFLAGS += -version-info 4:0:0
+
+if BUILD_MACOS
+libzfs_la_LDFLAGS += -framework IOKit -lssl
+endif
 
 # Library ABI
 EXTRA_DIST = libzfs.abi libzfs.suppr
