Upstream: zfs-tests to support macOS
Start to add macOS support to the zfs-tester environment, much more work
is required still.

Signed-off-by: Jorgen Lundman <lundman@lundman.net>

--- a/tests/zfs-tests/include/tunables.cfg
+++ b/tests/zfs-tests/include/tunables.cfg
@@ -14,7 +14,7 @@
 
 UNAME=$(uname)
 
-# NAME				FreeBSD tunable			Linux tunable
+# NAME				FreeBSD tunable			Linux tunable	macOS tunable
 cat <<%%%% |
 ADMIN_SNAPSHOT			UNSUPPORTED			zfs_admin_snapshot
 ALLOW_REDACTED_DATASET_MOUNT	allow_redacted_dataset_mount	zfs_allow_redacted_dataset_mount
@@ -89,6 +89,6 @@ ZEVENT_LEN_MAX			zevent.len_max			zfs_zevent_len_max
 ZEVENT_RETAIN_MAX		zevent.retain_max		zfs_zevent_retain_max
 ZIO_SLOW_IO_MS			zio.slow_io_ms			zio_slow_io_ms
 %%%%
-while read name FreeBSD Linux; do
+while read name FreeBSD Linux Darwin; do
 	eval "export ${name}=\$${UNAME}"
 done
