--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -2,4 +2,7 @@ SUBDIRS = zfs sudoers.d
 if BUILD_LINUX
 SUBDIRS += default $(ZFS_INIT_SYSTEMD) $(ZFS_INIT_SYSV) $(ZFS_MODULE_LOAD)
 endif
+if BUILD_MACOS
+SUBDIRS += launchd paths.d
+endif
 DIST_SUBDIRS = default init.d zfs systemd modules-load.d sudoers.d
