--- a/lib/libshare/Makefile.am
+++ b/lib/libshare/Makefile.am
@@ -22,4 +22,10 @@ USER_C += \
 	os/freebsd/smb.c
 endif
 
+if BUILD_MACOS
+USER_C += \
+	os/macos/nfs.c \
+	os/macos/smb.c
+endif
+
 libshare_la_SOURCES = $(USER_C)
