--- a/lib/libuutil/Makefile.am
+++ b/lib/libuutil/Makefile.am
@@ -19,6 +19,7 @@ USER_C = \
 libuutil_la_SOURCES = $(USER_C)
 
 libuutil_la_LIBADD = \
+	$(abs_top_builddir)/lib/libefi/libefi.la \
 	$(abs_top_builddir)/lib/libavl/libavl.la \
 	$(abs_top_builddir)/lib/libspl/libspl.la
 
@@ -26,8 +27,10 @@ libuutil_la_LIBADD += $(LTLIBINTL)
 
 libuutil_la_LDFLAGS = -pthread
 
+if !BUILD_MACOS
 if !ASAN_ENABLED
 libuutil_la_LDFLAGS += -Wl,-z,defs
+endif
 endif
 
 libuutil_la_LDFLAGS += -version-info 3:0:0
