macOS: If we don't set SOURCES it makes up zfs.c from nowhere

--- a/cmd/os/macos/zfs_util/Makefile.am
+++ b/cmd/os/macos/zfs_util/Makefile.am
@@ -24,6 +24,8 @@ PKGINFO = PkgInfo
 INFO_PLIST = Info.plist
 INFOPLIST_STRINGS = InfoPlist.strings
 
+zfs_fs_SOURCES =
+
 bin_PROGRAMS = zfs.fs
 
 dist_noinst_DATA = $(INFO_PLIST) English.lproj/$(INFOPLIST_STRINGS) $(PKGINFO)
