--- a/etc/launchd/launchd.d/zpool-import-all.sh.in
+++ b/etc/launchd/launchd.d/zpool-import-all.sh.in
@@ -2,14 +2,37 @@
 
 echo "+zpool-import-all.sh"
 date
+export PATH=/sbin:/bin:/usr/bin:/usr/sbin:/usr/local/sbin:/usr/local/bin
 export ZPOOL=@sbindir@/zpool
+export ZFS=@sbindir@/zfs
 export ZPOOL_IMPORT_ALL_COOKIE=/var/run/org.openzfsonosx.zpool-import-all.didRun
 export INVARIANT_DISKS_IDLE_FILE=/var/run/disk/invariant.idle
 export TIMEOUT_SECONDS=60
 export MAXIMUM_SLEEP_ITERATIONS=$((${TIMEOUT_SECONDS} * 10))
 
-2>&1 /usr/bin/time /usr/sbin/system_profiler SPParallelATADataType SPCardReaderDataType SPFibreChannelDataType SPFireWireDataType SPHardwareRAIDDataType SPNetworkDataType SPPCIDataType SPParallelSCSIDataType SPSASDataType SPSerialATADataType SPStorageDataType SPThunderboltDataType SPUSBDataType SPNetworkVolumeDataType 1>/dev/null
+# 2019-06-07 - temporary hack for new mac mini startup volume
+# stupid kext does not load automagically at boot !
+
+#/sbin/kextload /Library/Extensions/SATSMARTDriver.kext
+
+# probe the various devices, this acts as a delay
+
+/usr/bin/time /usr/sbin/system_profiler SPParallelATADataType SPCardReaderDataType SPFibreChannelDataType SPFireWireDataType SPHardwareRAIDDataType SPNetworkDataType SPPCIDataType SPParallelSCSIDataType SPSASDataType SPSerialATADataType SPStorageDataType SPThunderboltDataType SPUSBDataType SPNetworkVolumeDataType SPNVMeDataType 1>/dev/null
+
+# this also acts as a delay
 /bin/sync
+
+if [ ! -f /etc/zfs/noautomount ];
+then
+       # if we are booted from rpool, zfs mount -a (swap, smd $TEMP)
+       ${ZPOOL} list rpool && ${ZFS} mount -a
+fi
+
+if [ -f /etc/zfs/noautoimport ];
+then
+    echo "/etc/zfs/noautoimport exits, exiting";
+    exit 0;
+fi
 
 echo "Waiting up to ${TIMEOUT_SECONDS} seconds for the InvariantDisks idle file ${INVARIANT_DISKS_IDLE_FILE} to exist"
 
@@ -28,18 +51,164 @@ else
 fi
 date
 
-sleep 10
-echo "Running zpool import -a"
-date
+# try caches first
 
-"${ZPOOL}" import -a -d /var/run/disk/by-id
-ret=$?
+ZPOOL_CACHE_DONE=0
+if [ -f /etc/zfs/zpool.cache ]
+then
+    # but this isn't a superb idea because import order is all over the map
+    # and importing ssdpool last is [a] system-slowing and [b] leaves empty directories mounted
+    #echo "Running zpool import -c /etc/zfs/zpool.cache -a"
+    #"${ZPOOL}" import -c /etc/zfs/zpool.cache -a && ZPOOL_CACHE_DONE=1
+    echo "zpool.cache file found!"
+fi
 
-date
-echo "Finished running zpool import -a : ${ret}"
+function testcacheimport () (c=/etc/zfs/caches/$1.cache;
+			if [ -f $c ]
+			then
+			    echo testing importability using cachefile $c
+			    im=`${ZPOOL} import -c $c 2>&1`; export im
+			    res=`echo $im | egrep -i 'degrad|unavail|faulted|damaged|corrupted|missing|cannot.(discover|import)|no.pools.avail'`; export res
+			    if [ "x$res" == "x" ]
+			    then
+				echo OK;
+				echo res: $res
+				echo im: $im
+				return 0;
+			    else
+				echo BAD;
+				echo res: $res
+				echo im: $im
+				return -1;
+			    fi
+			else
+			    echo cannot import because no such file $c
+			    return -1
+			fi
+			    )
+
+function docacheimport () (c=/etc/zfs/caches/$1.cache
+			   echo testing importability of $1...
+			   testcacheimport $1 || return -1
+			   echo testcacheimport returned OK, importing $1...
+			   testcacheimport $1 && "${ZPOOL}" import -c $c -a
+			   return $?)
+
+# 2019-06 temporary hack for new mac mini temp boot volume
+zpool import ssdpool; zfs mount -av
+
+if ((!ZPOOL_CACHE_DONE))
+then
+    set -e
+    TRINITY_CACHE_DONE=0
+    SAFETY_CACHE_DONE=0
+    DUAL_CACHE_DONE=0
+    HOMEPOOL_CACHE_DONE=0
+    echo "ZPOOL_CACHE_DONE = 0, therefore trying individual caches"
+    export SSDPOOL_GUID="8745912265166105705"
+    if [ `zpool get -H -p -o value guid ssdpool` -ne $SSDPOOL_GUID ]; then
+	echo "ssdpool not already imported with guid" $SSDPOOL_GUID " this is critical. bye."
+	exit 1
+    fi
+#    if [ `zfs get -H -p -o value mounted ssdpool/DATA/opt` -ne "yes" ]; then
+#	zfs mount -a
+#    fi
+#    if [ `zfs get -H -p -o value mounted ssdpool/smd` -ne "yes" ]; then
+#	zfs mount -a
+    #    fi
+    zfs mount -a -v
+
+#    if [ -f /etc/zfs/caches/ssdpool.cache ]
+#    then
+#	docacheimport ssdpool && SSDPOOL_CACHE_DONE=1
+#	if ((!SSDPOOL_CACHE_DONE))
+#	then
+#	    echo "ssdpool cache import failed, this is critical. bye."
+#	    exit 1
+#	fi
+#    fi
+    if [ -f /etc/zfs/caches/Quarto.cache ]
+    then
+	testcacheimport Quarto || echo 'Quarto test failed'
+    fi
+    if [ -f /etc/zfs/caches/Trinity.cache ]
+    then
+	docacheimport Trinity && TRINITY_CACHE_DONE=1
+    fi
+    if [ -f /etc/zfs/caches/Safety.cache ]
+    then
+	docacheimport Safety && SAFETY_CACHE_DONE=1
+    fi
+    if [ -f /etc/zfs/caches/Quarto.cache ]
+    then
+	docacheimport Quarto && QUARTO_CACHE_DONE=1
+    fi
+    if [ -f /etc/zfs/caches/ipool.cache ]
+    then
+	docacheimport ipool && IPOOL_CACHE_DONE=1
+    fi
+    if [ -f /etc/zfs/caches/homepool.cache ]
+    then
+	echo "attempting to cache import homepool"
+	docacheimport homepool && HOMEPOOL_CACHE_DONE=1
+	if ((!HOMEPOOL_CACHE_DONE))
+	then
+	    echo "homepool cache import failed, this is critical. bye."
+	    exit 1
+	fi
+    fi
+    if [ -f /etc/zfs/caches/Dual.cache ]
+    then
+	docacheimport Dual && DUAL_CACHE_DONE=1
+    fi
+fi
+
+set +e
+if((ZPOOL_CACHE_DONE)); then echo Everything imported via cache.; fi
+if((TRINITY_CACHE_DONE)); then echo Trinity imported via cache.; fi
+if((SAFETY_CACHE_DONE)); then echo Safety imported via cache.; fi
+if((QUARTO_CACHE_DONE)); then echo Quarto imported via cache.; fi
+if((IPOOL_CACHE_DONE)); then echo ipool imported via cache.; fi
+if((HOMEPOOL_CACHE_DONE)); then echo homepool imported via cache.; fi
+if((DUAL_CACHE_DONE)); then echo Dual imported via cache.; fi
+
+if ((!ZPOOL_IMPORT_CACHE && ((! ((SAFETY_CACHE_DONE || QUARTO_CACHE_DONE || TRINITY_CACHE_DONE || HOMEPOOL_CACHE_DONE || DUAL_CACHE_DONE || IPOOL_CACHE_DONE ))))))
+then
+    echo "Nothing imported via caches.  Running zpool import -d /etc/zfs/devices"
+    "${ZPOOL}" import -d /etc/zfs/devices
+    date
+
+    # should also make this work on mis; for now fallback will have to be manual
+
+    echo "Running zfs mount -a -v || exit 1"
+    "${ZFS}" mount -a  -v || exit 1
+    date
+
+    echo "Running zpool import -d /etc/zfs/devices Trinity || exit 1"
+    "${ZPOOL}" import -d /etc/zfs/devices Trinity || exit 1
+    date
+
+    echo "Running zpool import -d /etc/zfs/devices -a"
+    date
+
+    "${ZPOOL}" import -d /etc/zfs/devices -a
+    ret=$?
+
+    date
+    echo "Finished running zpool import -a : ${ret}"
+fi
 
 echo "Touching the file ${ZPOOL_IMPORT_ALL_COOKIE}"
 touch "${ZPOOL_IMPORT_ALL_COOKIE}"
+
+echo "Setting cachefile properties"
+for i in Safety Trinity Quarto ipool homepool Dual
+do
+    "${ZPOOL}" set cachefile=/etc/zfs/caches/$i.cache $i
+done
+
+echo "Running zfs mount -a -v || exit 1"
+"${ZFS}" mount -a  -v || exit 1
 
 date
 echo "-zpool-import-all.sh"
